# dotsnapshot

./: .ci_fix  .commitlintrc.json  .gitignore  .llvm-cov.toml  .mcp.json  .releaserc.json  .shellcheckrc  CHANGELOG.md  CLAUDE.md  CLIPPY_NOTES.md  Cargo.toml  LICENSE.md  Makefile  README.md  RELEASE_NOTES_v1.2.2.md  RELEASE_PLAN.md  dotsnapshot-macos-arm64.sha256  dotsnapshot.sh  dotsnapshot.toml  lint-rules.md  rustfmt.toml  test-releaserc-command.sh  test-version-update.sh  test_config.toml
.github/: BRANCH_PROTECTION.md  CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: create-release-pr.sh  setup-release-branch.sh
.github/workflows/: build-binaries.yml  ci.yml  gh-pages.yml  release-new.yml  release.yml  semantic-commits.yml
Formula/: dotsnapshot.rb
config/: dotsnapshot.conf  generators.conf
docs/: COVERAGE.md  index.html
generators/: cursor-extensions.sh  cursor-settings.sh  homebrew.sh  test-generator.sh  vscode-extensions.sh  vscode-settings.sh
homebrew/: HOMEBREW_SETUP.md
lib/: backup-manager.sh  common.sh  config.sh
scripts/: homebrew-setup.sh  install-hooks.sh  install.sh  release.sh  test-with-coverage.sh  uninstall.sh  version.sh
src/: config.rs  lib.rs  main.rs  symbols.rs  tests.rs
src/cli/: hooks.rs  mod.rs  restore.rs
src/cli/hooks/: mod.rs
src/cli/hooks/tests/: actions.rs  commands.rs  config.rs  display.rs  mod.rs
src/cli/hooks/tests/commands/: add_operations.rs  command_dispatch.rs  error_handling.rs  list_operations.rs  mod.rs  plugin_management.rs  remove_operations.rs  scripts_directory.rs  validation.rs
src/cli/hooks/tests/commands/test_utils/: fixtures.rs  helpers.rs  mod.rs
src/core/: auto_register.rs  checksum.rs  cleaner.rs  config_schema.rs  executor.rs  hooks.rs  mod.rs  plugin.rs  restore.rs  snapshot.rs
src/core/executor/: mod.rs
src/core/executor/tests/: hooks.rs  mod.rs  performance.rs  plugins.rs  progress.rs  snapshots.rs  test_utils.rs
src/core/hooks/: tests.rs
src/core/plugin/: mod.rs
src/core/plugin/tests/: mod.rs  plugin_trait.rs  registry.rs  result.rs  utilities.rs
src/core/progress/: mod.rs
src/core/progress/tests/: mod.rs  progress_monitor.rs  test_utils.rs
src/plugins/: mod.rs
src/plugins/core/: mod.rs
src/plugins/core/base/: extensions.rs  keybindings.rs  mod.rs  package.rs  settings.rs  static_files.rs  static_files_test.rs
src/plugins/core/base/static_files/: mod.rs
src/plugins/core/base/static_files/tests/: configuration.rs  edge_cases.rs  error_handling.rs  execution.rs  integration.rs  mock_cores.rs  mod.rs  plugin_core.rs  restoration.rs  validation.rs
src/plugins/core/base/static_files/tests/test_utils/: advanced_mocks.rs  mod.rs  (+3 more)
src/plugins/core/mixins/: command.rs  config.rs  files.rs  hooks.rs  mod.rs
src/plugins/cursor/: extensions.rs  keybindings.rs  mod.rs  settings.rs
src/plugins/homebrew/: brewfile.rs  brewfile_new.rs  mod.rs
src/plugins/npm/: config.rs  config_new.rs  global_packages.rs  global_packages_new.rs  mod.rs
src/plugins/static/: files.rs  mod.rs
src/plugins/static_files/: mod.rs  plugin.rs
src/plugins/vscode/: extensions.rs  extensions_original.rs  keybindings.rs  mod.rs  settings.rs  settings_original.rs
src/tests/: mod.rs
src/tests/config/: defaults.rs  hooks.rs  loading.rs  mod.rs  serialization.rs  test_utils.rs
src/tests/core_hooks/: actions.rs  config.rs  context.rs  execution.rs  mod.rs  patterns.rs  test_utils.rs
src/tests/main/: argument_parsing.rs  command_parsing.rs  configuration.rs  mod.rs  test_utils.rs  utility_flags.rs
test/: install.sh  test-backup-cleanup.sh
tests/: cli_hooks_tests.rs  cli_integration_tests.rs  cli_restore_tests.rs  hooks_integration_tests.rs  restore_integration_tests.rs
tests/test-scripts/: homebrew-pre-backup.sh  post-snapshot-cleanup.sh  pre-snapshot-setup.sh  vscode-post-backup.sh
