[package]
name = "dotsnapshot"
version = "1.3.1"
edition = "2021"
rust-version = "1.3.1"
description = "A CLI utility to create snapshots of dotfiles and configuration for seamless backup and restoration"
license = "MIT"
repository = "https://github.com/tomerlichtash/dotsnapshot"
keywords = ["dotfiles", "backup", "configuration", "snapshots", "cli"]
categories = ["command-line-utilities", "config"]

[dependencies]
async-trait = "0.1"
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
clap_complete = "4.0"
clap_mangen = "0.2"
tracing = "0.1"
sha2 = "0.10"
dirs = "5.0"
which = "6.0"

[dependencies.tokio]
version = "1.3.1"
features = ["full"]

[dependencies.serde]
version = "1.3.1"
features = ["derive"]

[dependencies.clap]
version = "1.3.1"
features = ["derive", "env", "wrap_help"]

[dependencies.tracing-subscriber]
version = "1.3.1"
features = ["local-time"]

[dependencies.time]
version = "1.3.1"
features = ["formatting", "local-offset"]

[dependencies.chrono]
version = "1.3.1"
features = ["serde"]

[dev-dependencies]
tempfile = "3.0"