[package]
name = "dotsnapshot"
version = "1.2.3"
edition = "2021"
rust-version = "1.81"
description = "A CLI utility to create snapshots of dotfiles and configuration for seamless backup and restoration"
license = "MIT"
repository = "https://github.com/tomerlichtash/dotsnapshot"
keywords = ["dotfiles", "backup", "configuration", "snapshots", "cli"]
categories = ["command-line-utilities", "config"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
clap_complete = "4.5"
clap_mangen = "0.2"
tracing = "0.1"
sha2 = "0.10"
dirs = "5.0"
which = "6.0"
glob = "0.3"
inventory = "0.3"
schemars = "0.8"
shellexpand = "3.0"

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.clap]
version = "4.0"
features = ["derive", "env", "wrap_help"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["local-time"]

[dependencies.time]
version = "0.3"
features = ["formatting", "local-offset"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

# Lint configuration
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

# Coverage configuration to exclude standard library and external dependencies
[package.metadata.coverage]
exclude = [
    "*/rustc-*-src/*",
    "*/.cargo/registry/*",
    "*/target/debug/deps/*",
    "*/rustlib/*"
]

# LLVM coverage configuration
[package.metadata.llvm-cov]
exclude = [
    "*/rustc-*-src/*",
    "*/.cargo/registry/*", 
    "*/target/debug/deps/*",
    "*/rustlib/*"
]